--- a/freeCodeCamp/roman-numeral-converter/index.html
+++ b/freeCodeCamp/roman-numeral-converter/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Roman Numeral Converter</h1>
     <input type="text" name="text" id="number">
-    <button id="convert-bytton">Convert</button>
+    <button id="convert-btn">Convert</button>
     <div id="output"></div>
   </div>
   <script src="script.js"></script>
